Solved security config issue